# YapPad

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff_out.json  ruff_output.txt  vulture_out.txt  vulture_output.txt
yappad/: __main__.py  app.py  loopbackconsumer.py  messages.py  models.py  sdconsumer.py  storage.py
yappad/core/: __init__.py  constants.py  exceptions.py  messages.py  models.py  storage.py
yappad/engine/: __init__.py  loopback_consumer.py  loopback_engine.py  sd_consumer.py  sd_engine.py  whisper_engine.py
yappad/screens/: base_screen.py  editor_screen.py  loopback_screen.py  main_screen.py  mic_screen.py  viewer_screen.py
yappad/styles/: temp.tcss  temp2.tcss
yappad/widgets/: __init__.py  customTranscriptFooter.py  deleteConfirmOverlay.py  loadingOverlay.py  localFileExplorer.py  localSettings.py  markdownArea.py  newFileOverlay.py  newFolderOverlay.py  popupComponent.py  quickActionOverlay.py  settingsOverlay.py  topBar.py  transcriptEditor.py  transcriptInputArea.py  transcriptTabs.py  userInputArea.py
