[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yappad"
version = "0.1.0"
description = "A markdown-based voice note-taking TUI app"
requires-python = ">=3.10"
dependencies = [
    "textual",
    "faster-whisper",
    "sounddevice",
    "numpy",
    "rich",
    "platformdirs",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["yappad*"]
